HW5 -- added bot--scrapper--link-parser connections